--- a/pwa/style.css
+++ b/pwa/style.css
@@ -21,7 +21,7 @@ a:hover {text-decoration: underline}
     transition: none;
 }
 [type="text"]:focus, [type="number"]:focus {
-    color: #222;
+    color: #333;
     box-shadow: 0px 0px 8px rgba(255,255,255,0.85);
     background-color: #fff;
     border-color: rgba(255,255,255,0.5);
@@ -49,6 +49,9 @@ a:hover {text-decoration: underline}
     }
 }
 
+input::placeholder, textarea::placeholder {
+    color: #fff;
+}
 
 /*colours*/
 
